<resources>
    <string name="app_name">MathApp</string>

    <string name="answer_button_text">CHECK ANSWER</string>
    <string name="back_button_text">BACK ⏎</string>

    <string name="select_calculation_text">SELECT CALCULATION:</string>
    <string name="answer_hint_text">ANSWER</string>
    <string name="default_calculation">1 + 2 =</string>

    <string name="division_symbol">÷</string>
    <string name="multiplication_symbol">x</string>
    <string name="subtraction_symbol">—</string>
    <string name="addition_symbol">+</string>

    <string name="light_theme_text">LIGHT THEME</string>
    <string name="dark_theme_text">DARK THEME</string>
    <string name="color_theme_text">COLOR THEME</string>

    <string name="default_answer_text">Correct/Wrong answer</string>
    <string name="correct_answer_text">CORRECT ANSWER</string>
    <string name="wrong_answer_text"> WRONG ANSWER </string>
</resources>